Auto param-Testing

--- a/Frozenlake-Präsentation.ipynb
+++ b/Frozenlake-Präsentation.ipynb
@@ -15,17 +15,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prerequisites 🏗️\n",
-    "Before diving on the notebook **you need to understand**:\n",
-    "- The foundations of Reinforcement learning (MC, TD, Rewards hypothesis...) [Article](https://medium.freecodecamp.org/an-introduction-to-reinforcement-learning-4339519de419)\n",
-    "- Q-learning [Article](https://medium.freecodecamp.org/diving-deeper-into-reinforcement-learning-with-q-learning-c18d0db58efe)\n",
-    "- In the [video version](https://www.youtube.com/watch?v=q2ZOEFAaaI0)  we implemented a Q-learning agent that learns to play OpenAI Taxi-v2 🚕 with Numpy."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Step 0: Import the dependencies 📚\n",
     "We use 3 libraries:\n",
     "- `Numpy` for our Qtable\n",
@@ -41,8 +30,7 @@
    "source": [
     "import numpy as np\n",
     "import gym\n",
-    "import random\n",
-    "import time"
+    "import random"
    ]
   },
   {
@@ -75,18 +63,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "64\n"
+     ]
+    }
+   ],
    "source": [
     "action_size = env.action_space.n\n",
-    "state_size = env.observation_space.n"
+    "state_size = env.observation_space.n\n",
+    "print(action_size)\n",
+    "print(state_size)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -207,70 +208,70 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score over time: 0.09426666666666667\n",
-      "[[1.66100085e-02 1.63313685e-02 1.67180799e-02 1.64664646e-02]\n",
-      " [1.84978625e-02 1.82102235e-02 2.02161102e-02 1.86063713e-02]\n",
-      " [2.13128049e-02 2.14955531e-02 2.09344903e-02 2.14853028e-02]\n",
-      " [2.43009224e-02 2.71082111e-02 4.04057114e-02 2.46598377e-02]\n",
-      " [3.61421780e-02 4.27839721e-02 5.11417840e-02 4.45471050e-02]\n",
-      " [5.41098288e-02 6.71128175e-02 6.29634569e-02 6.02682325e-02]\n",
-      " [7.26656729e-02 7.36941114e-02 7.44523898e-02 7.16774872e-02]\n",
-      " [7.73834984e-02 7.98297958e-02 8.37555868e-02 7.89837411e-02]\n",
-      " [1.65891585e-02 1.65167136e-02 1.98183851e-02 1.65932012e-02]\n",
-      " [1.70542580e-02 1.73034103e-02 2.95899318e-02 1.78356672e-02]\n",
-      " [1.94657296e-02 1.96968326e-02 3.27649071e-02 1.86868723e-02]\n",
-      " [1.76721525e-02 2.02677357e-02 1.46713525e-02 4.27263992e-02]\n",
-      " [4.20738757e-02 3.04331667e-02 5.40611986e-02 4.38378502e-02]\n",
-      " [5.24770428e-02 4.29545567e-02 6.29705334e-02 5.63540535e-02]\n",
-      " [7.18440339e-02 6.90976948e-02 8.49891691e-02 6.67340792e-02]\n",
-      " [7.76528510e-02 8.12432841e-02 8.16389201e-02 8.12075473e-02]\n",
-      " [1.65468310e-02 1.63819978e-02 1.60532937e-02 1.68685689e-02]\n",
-      " [1.69830454e-02 9.61461356e-03 1.53019563e-02 1.75586249e-02]\n",
-      " [1.20097827e-02 7.00918157e-03 1.11053510e-02 6.92260167e-03]\n",
+      "Score over time: 0.09296666666666667\n",
+      "[[2.40007266e-02 2.45566769e-02 2.70421162e-02 2.43356508e-02]\n",
+      " [2.67993538e-02 2.57520620e-02 3.78499254e-02 2.39843764e-02]\n",
+      " [3.77013875e-02 4.50211968e-02 3.03247866e-02 3.26324545e-02]\n",
+      " [4.56456736e-02 5.61240465e-02 7.20767484e-02 7.53861256e-02]\n",
+      " [6.17735774e-02 8.26676656e-02 9.01708129e-02 6.27107144e-02]\n",
+      " [6.73966901e-02 6.88013370e-02 8.78291386e-02 6.84243765e-02]\n",
+      " [8.88374885e-02 7.65150403e-02 9.35738770e-02 8.41434158e-02]\n",
+      " [9.23461974e-02 8.77996792e-02 9.24829509e-02 9.19456679e-02]\n",
+      " [2.36441274e-02 2.38664467e-02 2.45226533e-02 2.36904531e-02]\n",
+      " [2.40823470e-02 2.50907718e-02 2.94612729e-02 2.49435839e-02]\n",
+      " [2.62139600e-02 2.31437183e-02 6.17614408e-02 3.94759047e-02]\n",
+      " [1.96075469e-03 3.62459419e-03 2.23706305e-03 9.32086042e-02]\n",
+      " [3.94891102e-02 6.68040305e-02 5.56376801e-02 1.02064681e-01]\n",
+      " [5.37298286e-02 7.63140647e-02 9.16369083e-02 7.53450283e-02]\n",
+      " [9.80846796e-02 9.40749993e-02 1.20574144e-01 9.55179014e-02]\n",
+      " [9.15402614e-02 9.43930349e-02 1.51322544e-01 9.62782650e-02]\n",
+      " [1.71786743e-02 2.16268800e-02 1.47428998e-02 2.69173985e-02]\n",
+      " [2.37757057e-02 1.58698266e-02 1.70307763e-02 2.13240119e-02]\n",
+      " [1.91903563e-02 4.50750914e-03 5.83346330e-03 1.40055176e-02]\n",
       " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-      " [4.20597258e-03 1.02679683e-02 6.31006985e-02 7.93260017e-03]\n",
-      " [2.12615776e-02 2.93973051e-02 2.37025170e-02 4.92808466e-02]\n",
-      " [6.71083523e-02 5.63111287e-02 8.18432262e-02 7.43783818e-02]\n",
-      " [1.00888795e-01 8.53783139e-02 8.20473097e-02 8.38496714e-02]\n",
-      " [1.43689577e-02 1.39393473e-02 1.33943888e-02 1.37533225e-02]\n",
-      " [6.85964390e-03 1.16801529e-02 9.00246871e-03 1.99447792e-02]\n",
-      " [7.42663877e-03 6.99970867e-03 5.80976452e-03 3.48388826e-02]\n",
-      " [2.97047327e-04 1.49158218e-02 4.52670833e-04 1.19471831e-03]\n",
-      " [7.75748451e-02 2.05544361e-03 3.19140075e-03 7.01440084e-03]\n",
+      " [6.53528615e-03 1.27573061e-02 6.88894188e-02 7.30033520e-03]\n",
+      " [1.58367284e-02 5.07768611e-02 1.44821400e-02 8.71907165e-02]\n",
+      " [1.00744377e-01 5.58178899e-02 1.72010278e-01 8.67299742e-02]\n",
+      " [1.09729562e-01 2.11898219e-01 1.28104523e-01 1.23938897e-01]\n",
+      " [1.11951503e-02 1.19276317e-02 1.34506433e-02 1.94558698e-02]\n",
+      " [7.61087064e-03 8.27348417e-03 1.09663518e-02 1.76680237e-02]\n",
+      " [5.33403364e-03 5.70415555e-03 5.50980708e-03 7.64861791e-03]\n",
+      " [2.11077395e-04 1.93088919e-03 2.16819215e-03 2.45019895e-03]\n",
+      " [1.97587387e-02 5.28788031e-03 6.11844150e-04 4.50471223e-04]\n",
       " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-      " [3.68961686e-02 4.38311989e-02 1.17859833e-01 4.35529205e-02]\n",
-      " [2.40771397e-01 1.30551762e-01 1.12827082e-01 1.08964522e-01]\n",
-      " [5.99518263e-03 6.10773063e-03 4.75694707e-03 1.59626479e-02]\n",
-      " [1.52268822e-03 1.42434783e-03 1.10621296e-03 1.58444297e-02]\n",
-      " [2.60152362e-03 2.31634651e-05 4.73512450e-04 3.54956000e-05]\n",
+      " [8.36551078e-02 5.56777964e-02 1.97403467e-01 1.22068918e-01]\n",
+      " [2.32156570e-01 3.49337764e-01 1.73798565e-01 1.48610016e-01]\n",
+      " [1.04300287e-02 6.42849063e-03 1.16306131e-02 6.80464056e-03]\n",
+      " [9.59473585e-04 3.15918270e-03 9.58504321e-03 1.70369416e-03]\n",
+      " [9.46551589e-03 1.50867271e-06 1.10087636e-04 4.75416324e-05]\n",
       " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-      " [3.97830989e-03 2.85177179e-03 8.67010375e-02 3.80643801e-03]\n",
-      " [2.60936678e-02 7.92719950e-02 1.42016297e-02 7.89037566e-03]\n",
-      " [6.17509080e-02 1.11046507e-03 3.52748803e-02 2.68371614e-01]\n",
-      " [1.66167572e-01 1.03648709e-01 5.07599445e-01 1.22176199e-01]\n",
-      " [6.15011900e-03 2.84037278e-03 1.48388945e-03 2.65059173e-03]\n",
+      " [2.34635848e-02 3.30553937e-02 5.14463549e-02 2.75838548e-03]\n",
+      " [4.55175729e-02 1.13181426e-01 1.76157494e-02 6.61685446e-02]\n",
+      " [1.94093723e-02 1.14798790e-02 3.71325019e-04 3.45808893e-01]\n",
+      " [2.96015428e-01 3.11698630e-01 5.30939006e-01 2.83043338e-01]\n",
+      " [9.96555261e-03 2.95815643e-03 8.10464747e-04 8.21060602e-04]\n",
       " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
       " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-      " [4.83290970e-06 4.24223873e-05 1.34480518e-03 9.31351649e-08]\n",
-      " [1.07201296e-03 1.66254628e-03 1.45275549e-03 1.42449960e-01]\n",
-      " [1.22127852e-01 2.62667712e-03 3.70850614e-03 3.46545945e-03]\n",
+      " [1.00129542e-04 2.00487494e-05 5.41796577e-02 5.71876361e-08]\n",
+      " [4.00276281e-04 2.31165986e-03 1.90661703e-04 6.89176509e-02]\n",
+      " [9.77618652e-02 3.18024940e-04 5.46675360e-02 2.34358385e-03]\n",
       " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-      " [2.45577747e-02 1.52230676e-01 8.41160700e-01 1.18059142e-01]\n",
-      " [2.71984217e-03 7.03546528e-04 5.11274171e-04 7.95209038e-04]\n",
+      " [1.90684440e-01 1.55401343e-01 6.18800782e-01 3.21948154e-01]\n",
+      " [7.22650869e-03 7.16575946e-04 1.46731472e-03 8.42284720e-04]\n",
       " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-      " [5.14382488e-05 6.80278033e-04 2.34470326e-05 3.98128895e-05]\n",
-      " [2.38849896e-04 3.73722268e-05 1.44934020e-04 9.58068813e-05]\n",
+      " [1.06848502e-05 5.91940465e-05 1.19279537e-04 3.33767130e-05]\n",
+      " [1.82909411e-05 1.56184814e-05 1.57236593e-05 5.99964765e-03]\n",
       " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-      " [2.36534715e-01 1.14516848e-04 1.02293191e-01 1.41836206e-06]\n",
+      " [2.52140171e-01 1.50563121e-03 1.30649430e-02 9.99087418e-03]\n",
       " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-      " [2.09348958e-01 3.42272567e-01 5.63357818e-01 2.81112013e-02]\n",
-      " [2.38999476e-03 1.38814508e-03 1.69910497e-03 1.90289735e-03]\n",
-      " [4.84820298e-04 3.79880356e-04 2.55091118e-04 3.13624797e-04]\n",
-      " [1.50837287e-04 7.28613084e-04 7.15408660e-05 1.92734906e-04]\n",
+      " [5.95042864e-01 4.25116916e-02 9.41264416e-01 5.41251696e-01]\n",
+      " [3.97287764e-03 1.06114042e-03 8.78887717e-04 2.88526550e-03]\n",
+      " [4.05963429e-04 1.72268346e-03 1.21156837e-04 2.80595523e-04]\n",
+      " [5.09663141e-04 6.79566475e-05 1.17783911e-04 7.81961817e-04]\n",
       " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-      " [2.71508030e-03 3.65571998e-03 1.84696356e-01 0.00000000e+00]\n",
-      " [1.81315712e-01 4.76389390e-02 3.65631966e-01 2.29015470e-01]\n",
-      " [7.07661835e-02 8.78485820e-01 1.11485441e-01 3.40462567e-02]\n",
+      " [0.00000000e+00 2.28544854e-02 2.09286386e-01 1.69910037e-02]\n",
+      " [1.97171315e-01 1.44657203e-01 5.70247633e-01 2.30517147e-01]\n",
+      " [1.95981122e-01 9.01553918e-01 1.78034487e-01 2.34191430e-01]\n",
       " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]]\n"
      ]
     }
@@ -333,14 +334,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\fromm\\Anaconda3\\lib\\site-packages\\gym\\envs\\toy_text\\frozen_lake.py:271: UserWarning: \u001b[33mWARN: You are calling render method without specifying any render mode. You can specify the render_mode at initialization, e.g. gym(\"FrozenLake-v1\", render_mode=\"rgb_array\")\u001b[0m\n",
+      "  logger.warn(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Completionrate 0.625\n"
+      "Completionrate 0.669\n"
      ]
     }
    ],
@@ -376,6 +385,87 @@
     "print(\"Completionrate\",result/1000)\n",
     "env.close()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Run Game with rendering</h1>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "****************************************************\n",
+      "EPISODE  1\n",
+      "Number of steps 57\n",
+      "Reward 1.0\n",
+      "****************************************************\n",
+      "EPISODE  2\n",
+      "Number of steps 54\n",
+      "Reward 0.0\n",
+      "****************************************************\n",
+      "EPISODE  3\n",
+      "Number of steps 20\n",
+      "Reward 0.0\n",
+      "****************************************************\n",
+      "EPISODE  4\n",
+      "Number of steps 127\n",
+      "Reward 0.0\n",
+      "****************************************************\n",
+      "EPISODE  5\n",
+      "Number of steps 169\n",
+      "Reward 1.0\n",
+      "Completionrate 0.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "env = gym.make(\"FrozenLake-v1\",render_mode=\"human\",map_name=\"8x8\")\n",
+    "env.reset()\n",
+    "\n",
+    "result = 0\n",
+    "for episode in range(5):\n",
+    "    state = env.reset()[0]\n",
+    "    step = 0\n",
+    "    done = False\n",
+    "    print(\"****************************************************\")\n",
+    "    print(\"EPISODE \", episode+1)\n",
+    "\n",
+    "    for step in range(max_steps):\n",
+    "        \n",
+    "        # Take the action (index) that have the maximum expected future reward given that state\n",
+    "        action = np.argmax(qtable[state,:])\n",
+    "        \n",
+    "        new_state, reward, done, truncated, info = env.step(action)\n",
+    "        \n",
+    "        if done:\n",
+    "            # Here, we decide to only print the last state (to see if our agent is on the goal or fall into an hole)\n",
+    "            env.render()\n",
+    "            \n",
+    "            result += reward\n",
+    "            # We print the number of step it took.\n",
+    "            print(\"Number of steps\", step)\n",
+    "            print(\"Reward\",reward)\n",
+    "            break\n",
+    "        state = new_state\n",
+    "\n",
+    "print(\"Completionrate\",result/5)\n",
+    "env.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
