--- a/Frozenlake-Präsentation.ipynb
+++ b/Frozenlake-Präsentation.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,78 +201,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Score over time: 0.09296666666666667\n",
-      "[[2.40007266e-02 2.45566769e-02 2.70421162e-02 2.43356508e-02]\n",
-      " [2.67993538e-02 2.57520620e-02 3.78499254e-02 2.39843764e-02]\n",
-      " [3.77013875e-02 4.50211968e-02 3.03247866e-02 3.26324545e-02]\n",
-      " [4.56456736e-02 5.61240465e-02 7.20767484e-02 7.53861256e-02]\n",
-      " [6.17735774e-02 8.26676656e-02 9.01708129e-02 6.27107144e-02]\n",
-      " [6.73966901e-02 6.88013370e-02 8.78291386e-02 6.84243765e-02]\n",
-      " [8.88374885e-02 7.65150403e-02 9.35738770e-02 8.41434158e-02]\n",
-      " [9.23461974e-02 8.77996792e-02 9.24829509e-02 9.19456679e-02]\n",
-      " [2.36441274e-02 2.38664467e-02 2.45226533e-02 2.36904531e-02]\n",
-      " [2.40823470e-02 2.50907718e-02 2.94612729e-02 2.49435839e-02]\n",
-      " [2.62139600e-02 2.31437183e-02 6.17614408e-02 3.94759047e-02]\n",
-      " [1.96075469e-03 3.62459419e-03 2.23706305e-03 9.32086042e-02]\n",
-      " [3.94891102e-02 6.68040305e-02 5.56376801e-02 1.02064681e-01]\n",
-      " [5.37298286e-02 7.63140647e-02 9.16369083e-02 7.53450283e-02]\n",
-      " [9.80846796e-02 9.40749993e-02 1.20574144e-01 9.55179014e-02]\n",
-      " [9.15402614e-02 9.43930349e-02 1.51322544e-01 9.62782650e-02]\n",
-      " [1.71786743e-02 2.16268800e-02 1.47428998e-02 2.69173985e-02]\n",
-      " [2.37757057e-02 1.58698266e-02 1.70307763e-02 2.13240119e-02]\n",
-      " [1.91903563e-02 4.50750914e-03 5.83346330e-03 1.40055176e-02]\n",
-      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-      " [6.53528615e-03 1.27573061e-02 6.88894188e-02 7.30033520e-03]\n",
-      " [1.58367284e-02 5.07768611e-02 1.44821400e-02 8.71907165e-02]\n",
-      " [1.00744377e-01 5.58178899e-02 1.72010278e-01 8.67299742e-02]\n",
-      " [1.09729562e-01 2.11898219e-01 1.28104523e-01 1.23938897e-01]\n",
-      " [1.11951503e-02 1.19276317e-02 1.34506433e-02 1.94558698e-02]\n",
-      " [7.61087064e-03 8.27348417e-03 1.09663518e-02 1.76680237e-02]\n",
-      " [5.33403364e-03 5.70415555e-03 5.50980708e-03 7.64861791e-03]\n",
-      " [2.11077395e-04 1.93088919e-03 2.16819215e-03 2.45019895e-03]\n",
-      " [1.97587387e-02 5.28788031e-03 6.11844150e-04 4.50471223e-04]\n",
-      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-      " [8.36551078e-02 5.56777964e-02 1.97403467e-01 1.22068918e-01]\n",
-      " [2.32156570e-01 3.49337764e-01 1.73798565e-01 1.48610016e-01]\n",
-      " [1.04300287e-02 6.42849063e-03 1.16306131e-02 6.80464056e-03]\n",
-      " [9.59473585e-04 3.15918270e-03 9.58504321e-03 1.70369416e-03]\n",
-      " [9.46551589e-03 1.50867271e-06 1.10087636e-04 4.75416324e-05]\n",
-      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-      " [2.34635848e-02 3.30553937e-02 5.14463549e-02 2.75838548e-03]\n",
-      " [4.55175729e-02 1.13181426e-01 1.76157494e-02 6.61685446e-02]\n",
-      " [1.94093723e-02 1.14798790e-02 3.71325019e-04 3.45808893e-01]\n",
-      " [2.96015428e-01 3.11698630e-01 5.30939006e-01 2.83043338e-01]\n",
-      " [9.96555261e-03 2.95815643e-03 8.10464747e-04 8.21060602e-04]\n",
-      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-      " [1.00129542e-04 2.00487494e-05 5.41796577e-02 5.71876361e-08]\n",
-      " [4.00276281e-04 2.31165986e-03 1.90661703e-04 6.89176509e-02]\n",
-      " [9.77618652e-02 3.18024940e-04 5.46675360e-02 2.34358385e-03]\n",
-      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-      " [1.90684440e-01 1.55401343e-01 6.18800782e-01 3.21948154e-01]\n",
-      " [7.22650869e-03 7.16575946e-04 1.46731472e-03 8.42284720e-04]\n",
-      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-      " [1.06848502e-05 5.91940465e-05 1.19279537e-04 3.33767130e-05]\n",
-      " [1.82909411e-05 1.56184814e-05 1.57236593e-05 5.99964765e-03]\n",
-      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-      " [2.52140171e-01 1.50563121e-03 1.30649430e-02 9.99087418e-03]\n",
-      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-      " [5.95042864e-01 4.25116916e-02 9.41264416e-01 5.41251696e-01]\n",
-      " [3.97287764e-03 1.06114042e-03 8.78887717e-04 2.88526550e-03]\n",
-      " [4.05963429e-04 1.72268346e-03 1.21156837e-04 2.80595523e-04]\n",
-      " [5.09663141e-04 6.79566475e-05 1.17783911e-04 7.81961817e-04]\n",
-      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-      " [0.00000000e+00 2.28544854e-02 2.09286386e-01 1.69910037e-02]\n",
-      " [1.97171315e-01 1.44657203e-01 5.70247633e-01 2.30517147e-01]\n",
-      " [1.95981122e-01 9.01553918e-01 1.78034487e-01 2.34191430e-01]\n",
-      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]]\n"
+     "ename": "error",
+     "evalue": "display Surface quit",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-947acbede835>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mepisode\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtotal_episodes\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[1;31m# Reset the environment\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m     \u001b[0mstate\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m     \u001b[0mstep\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[0mdone\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\gym\\wrappers\\time_limit.py\u001b[0m in \u001b[0;36mreset\u001b[1;34m(self, **kwargs)\u001b[0m\n\u001b[0;32m     66\u001b[0m         \"\"\"\n\u001b[0;32m     67\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_elapsed_steps\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 68\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\gym\\wrappers\\order_enforcing.py\u001b[0m in \u001b[0;36mreset\u001b[1;34m(self, **kwargs)\u001b[0m\n\u001b[0;32m     40\u001b[0m         \u001b[1;34m\"\"\"Resets the environment with `kwargs`.\"\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_has_reset\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 42\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     43\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     44\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mrender\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\gym\\wrappers\\env_checker.py\u001b[0m in \u001b[0;36mreset\u001b[1;34m(self, **kwargs)\u001b[0m\n\u001b[0;32m     45\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0menv_reset_passive_checker\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0menv\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     46\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 47\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     48\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     49\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mrender\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\gym\\envs\\toy_text\\frozen_lake.py\u001b[0m in \u001b[0;36mreset\u001b[1;34m(self, seed, options)\u001b[0m\n\u001b[0;32m    264\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    265\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrender_mode\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"human\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 266\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrender\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    267\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;34m\"prob\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    268\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\gym\\envs\\toy_text\\frozen_lake.py\u001b[0m in \u001b[0;36mrender\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    277\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_render_text\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    278\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m  \u001b[1;31m# self.render_mode in {\"human\", \"rgb_array\"}:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 279\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_render_gui\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrender_mode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    280\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    281\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_render_gui\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\gym\\envs\\toy_text\\frozen_lake.py\u001b[0m in \u001b[0;36m_render_gui\u001b[1;34m(self, mode)\u001b[0m\n\u001b[0;32m    347\u001b[0m                 \u001b[0mrect\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mpos\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcell_size\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    348\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 349\u001b[1;33m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwindow_surface\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mblit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mice_img\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpos\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    350\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0mdesc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34mb\"H\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    351\u001b[0m                     \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwindow_surface\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mblit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhole_img\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpos\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31merror\u001b[0m: display Surface quit"
      ]
     }
    ],
@@ -334,25 +280,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\fromm\\Anaconda3\\lib\\site-packages\\gym\\envs\\toy_text\\frozen_lake.py:271: UserWarning: \u001b[33mWARN: You are calling render method without specifying any render mode. You can specify the render_mode at initialization, e.g. gym(\"FrozenLake-v1\", render_mode=\"rgb_array\")\u001b[0m\n",
-      "  logger.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Completionrate 0.669\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "env.reset()\n",
     "\n",
@@ -361,8 +291,6 @@
     "    state = env.reset()[0]\n",
     "    step = 0\n",
     "    done = False\n",
-    "    #print(\"****************************************************\")\n",
-    "    #print(\"EPISODE \", episode+1)\n",
     "\n",
     "    for step in range(max_steps):\n",
     "        \n",
@@ -372,13 +300,7 @@
     "        new_state, reward, done, truncated, info = env.step(action)\n",
     "        \n",
     "        if done:\n",
-    "            # Here, we decide to only print the last state (to see if our agent is on the goal or fall into an hole)\n",
-    "            env.render()\n",
-    "            \n",
     "            result += reward\n",
-    "            # We print the number of step it took.\n",
-    "            #print(\"Number of steps\", step)\n",
-    "            #print(\"Reward\",reward)\n",
     "            break\n",
     "        state = new_state\n",
     "\n",
@@ -395,37 +317,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "****************************************************\n",
-      "EPISODE  1\n",
-      "Number of steps 57\n",
-      "Reward 1.0\n",
-      "****************************************************\n",
-      "EPISODE  2\n",
-      "Number of steps 54\n",
-      "Reward 0.0\n",
-      "****************************************************\n",
-      "EPISODE  3\n",
-      "Number of steps 20\n",
-      "Reward 0.0\n",
-      "****************************************************\n",
-      "EPISODE  4\n",
-      "Number of steps 127\n",
-      "Reward 0.0\n",
-      "****************************************************\n",
-      "EPISODE  5\n",
-      "Number of steps 169\n",
-      "Reward 1.0\n",
-      "Completionrate 0.4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "env = gym.make(\"FrozenLake-v1\",render_mode=\"human\",map_name=\"8x8\")\n",
     "env.reset()\n",
@@ -459,13 +353,6 @@
     "print(\"Completionrate\",result/5)\n",
     "env.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
